syntax = "proto3";
option go_package="./protos";

service Team {
    rpc Get(GetTeamRequest) returns (GetTeamResponse);
}

message GetTeamRequest {
    string Id = 1;
}

message GetTeamResponse {
    string Id = 1;
    string OwnerId = 2;
}